# GeneTreeTask

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  queries.py  queries.sql
GeneTreeTask/: asgi.py  settings.py  urls.py  wsgi.py
relatives/: forms.py  models.py  urls.py  views.py
relatives/migrations/: 0001_initial.py  0002_remove_person_birth_date_remove_relationship_child_and_more.py
static/js/: tree.js
static/styles/: styles.css
templates/relatives/: add_person.html  people_list.html  person_detail.html  tree_node.html  tree_node_children.html
