[tool.poetry]
name = "genealogy-tree"
version = "0.1.0"
description = "A web application to create a genealogy tree"
authors = ["Egor Ivanov <e.r.ivanov@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
mypy = "^1.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
